# django-experiments

./: .gitignore  README.md
book-django-4-by-example/mysite/: README.md  pyproject.toml
book-django-4-by-example/mysite/blog/: admin.py  feeds.py  models.py  sitemaps.py  urls.py  views.py
book-django-4-by-example/mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
book-django-4-by-example/mysite/blog/templates/blog/: base.html
book-django-4-by-example/mysite/blog/templates/blog/post/: detail.html  latest_posts.html  list.html  share.html
book-django-4-by-example/mysite/blog/templatetags/: blog_tags.py
book-django-4-by-example/mysite/mysite/: settings.py  urls.py
django-tutorial/: README.md  db.sqlite3  requirements-dev.txt  requirements.txt
django-tutorial/mysite/: settings.py  urls.py
django-tutorial/polls/: admin.py  tests.py  views.py
django-tutorial/polls/migrations/: 0001_initial.py
django-tutorial/polls/templates/polls/: index.html
