[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Project mysite from book Django 4 By Example"
authors = ["Michał Dziadowicz <michal@dziadowicz.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-taggit = "^5.0.1"
markdown = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
